--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "./node_modules/.bin/webpack -w",
-    "start:dev": "./node_modules/.bin/webpack-dev-server",
-    "build": "./node_modules/.bin/webpack -p",
+    "start": "./node_modules/.bin/webpack -w --config webpack.dev.js",
+    "start:dev": "./node_modules/.bin/webpack-dev-server --open --config webpack.dev.js",
+    "build": "./node_modules/.bin/webpack --config webpack.prod.js",
     "serve": "./node_modules/.bin/http-server",
     "build-serve": "npm run build && npm run serve",
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -27,6 +27,7 @@
     "babel-plugin-transform-react-jsx": "^6.24.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-preact": "^1.1.0",
+    "compression-webpack-plugin": "^1.0.1",
     "copy-webpack-plugin": "^4.2.0",
     "css-loader": "^0.28.7",
     "extract-text-webpack-plugin": "^3.0.2",
@@ -42,7 +43,7 @@
     "uglifyjs-webpack-plugin": "^1.0.1",
     "webpack": "^3.8.1",
     "webpack-dev-server": "^2.9.3",
-    "webpack-manifest-plugin": "^1.3.2",
+    "webpack-merge": "^4.1.0",
     "webpack-plugin-critical": "^1.0.0",
     "workbox-webpack-plugin": "^2.1.0"
   }
