update libs and sw

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "./node_modules/.bin/webpack -w --config webpack.dev.js",
-    "start:dev": "./node_modules/.bin/webpack-dev-server --open --config webpack.dev.js",
+    "start:dev": "webpack-dev-server --config webpack.dev.js",
     "build": "./node_modules/.bin/webpack --config webpack.prod.js",
     "serve": "./node_modules/.bin/http-server",
     "build-serve": "npm run build && npm run serve",
@@ -16,34 +16,37 @@
   "author": "Pachito Marco Calabrese <pm.calabrese@gmail.com>",
   "license": "ISC",
   "dependencies": {
-    "bulma": "^0.6.0",
-    "preact": "^8.2.6"
+    "bulma": "^0.6.1",
+    "preact": "^8.2.6",
+    "preact-portal": "^1.1.2",
+    "rxjs": "^5.5.2",
+    "webpack-cli": "^2.0.12"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
+    "babel-loader": "^7.1.4",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-react-jsx": "^6.24.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-preact": "^1.1.0",
-    "compression-webpack-plugin": "^1.0.1",
-    "copy-webpack-plugin": "^4.2.0",
-    "css-loader": "^0.28.7",
+    "compression-webpack-plugin": "^1.1.11",
+    "copy-webpack-plugin": "^4.5.1",
+    "css-loader": "^0.28.11",
     "extract-text-webpack-plugin": "^3.0.2",
-    "html-critical-webpack-plugin": "^1.0.1",
-    "html-webpack-plugin": "^2.30.1",
-    "http-server": "^0.10.0",
-    "node-sass": "^4.5.3",
-    "preload-webpack-plugin": "^2.0.0",
-    "sass-loader": "^6.0.6",
-    "style-loader": "^0.19.0",
-    "ts-loader": "^3.1.0",
-    "typescript": "^2.5.3",
-    "uglifyjs-webpack-plugin": "^1.0.1",
+    "html-critical-webpack-plugin": "^1.1.0",
+    "html-webpack-plugin": "^3.0.7",
+    "http-server": "^0.11.1",
+    "node-sass": "^4.7.2",
+    "preload-webpack-plugin": "^2.3.0",
+    "sass-loader": "^6.0.7",
+    "style-loader": "^0.20.3",
+    "ts-loader": "^3.1.1",
+    "typescript": "^2.7.2",
+    "uglifyjs-webpack-plugin": "^1.2.4",
     "webpack": "^3.8.1",
-    "webpack-dev-server": "^2.9.3",
-    "webpack-merge": "^4.1.0",
+    "webpack-dev-server": "^3.1.1",
+    "webpack-merge": "^4.1.2",
     "webpack-plugin-critical": "^1.0.0",
-    "workbox-webpack-plugin": "^2.1.0"
+    "workbox-webpack-plugin": "^3.0.0"
   }
 }
