--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,9 @@
 {
     "compilerOptions": {
       "outDir": "./public",
-      "target": "es2015",
+      "target": "es2016",
       "module": "commonjs",
+      "noUnusedLocals": true,
       "noImplicitAny": false,
       "removeComments": true,
       "sourceMap": true,
@@ -14,5 +15,8 @@
     "include": [
       "./src/**/*.tsx",
       "./src/**/*.ts"
+    ],
+    "exclude": [
+      "./node_modules"
     ]
   }
