--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "preact-webpack-ts-boilerplate",
   "version": "1.0.0",
-  "description": "",
+  "description": "A minimalistic PWA boilerplate based on Webpack 3, Preact and Typescript with performance in mind",
   "main": "index.js",
   "scripts": {
     "start": "./node_modules/.bin/webpack -w --config webpack.dev.js",
     "start:dev": "webpack-dev-server --config webpack.dev.js",
     "build": "./node_modules/.bin/webpack --config webpack.prod.js",
-    "serve": "./node_modules/.bin/http-server",
+    "serve": "./node_modules/.bin/http-server -c-1",
     "build-serve": "npm run build && npm run serve",
     "test": "echo \"Error: no test specified\" && exit 1",
     "ghp": "git subtree push --prefix public origin gh-pages",
@@ -34,19 +34,19 @@
     "css-loader": "^0.28.11",
     "extract-text-webpack-plugin": "^3.0.2",
     "html-critical-webpack-plugin": "^1.1.0",
-    "html-webpack-plugin": "^3.0.7",
+    "html-webpack-plugin": "^3.1.0",
     "http-server": "^0.11.1",
-    "node-sass": "^4.7.2",
+    "node-sass": "^4.8.3",
     "preload-webpack-plugin": "^2.3.0",
     "sass-loader": "^6.0.7",
     "style-loader": "^0.20.3",
-    "ts-loader": "^3.1.1",
+    "ts-loader": "^3.5.0",
     "typescript": "^2.7.2",
     "uglifyjs-webpack-plugin": "^1.2.4",
     "webpack": "^3.8.1",
     "webpack-dev-server": "^3.1.1",
     "webpack-merge": "^4.1.2",
     "webpack-plugin-critical": "^1.0.0",
-    "workbox-webpack-plugin": "^3.0.0"
+    "workbox-webpack-plugin": "^3.0.1"
   }
 }
