--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "./node_modules/.bin/webpack -w --config webpack.dev.js",
     "start:dev": "webpack-dev-server --config webpack.dev.js",
     "build": "./node_modules/.bin/webpack --config webpack.prod.js",
-    "serve": "./node_modules/.bin/ws --spa ./public/index.html",
+    "serve": "./node_modules/.bin/http-server public -c-1 -p 8080 --push-state",
     "build-serve": "npm run build && npm run serve",
     "test": "echo \"Error: no test specified\" && exit 1",
     "ghp": "git subtree push --prefix public origin gh-pages",
@@ -16,6 +16,7 @@
   "author": "Pachito Marco Calabrese <pm.calabrese@gmail.com>",
   "license": "ISC",
   "dependencies": {
+    "autobind-decorator": "^2.1.0",
     "bulma": "^0.7.1",
     "preact": "^8.2.7",
     "preact-router": "^2.6.0"
