--- a/package.json
+++ b/package.json
@@ -34,10 +34,10 @@
     "extract-text-webpack-plugin": "^3.0.2",
     "html-critical-webpack-plugin": "^1.1.0",
     "html-webpack-plugin": "^3.1.0",
-    "http-server": "^0.11.1",
     "node-sass": "^4.8.3",
     "preload-webpack-plugin": "^2.3.0",
     "sass-loader": "^6.0.7",
+    "spa-http-server": "^0.9.0",
     "style-loader": "^0.20.3",
     "ts-loader": "^3.5.0",
     "typescript": "^2.7.2",
